--- a/app/src/main/res/layout/activity_coroutine.xml
+++ b/app/src/main/res/layout/activity_coroutine.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="inspect.cegzm.com.CoroutineActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/logo_iv"
+        android:layout_width="80dp"
+        android:layout_height="80dp" />
+</LinearLayout>
