add show open info

--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -34,4 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:ignore="VectorDrawableCompat" />
+    <!--<include-->
+        <!--layout="@layout/layoutkkk"-->
+        <!--/>-->
 </LinearLayout>
